# gdextension_example

./: .gitignore  CMakeLists.txt  README.md  project.godot
demo/: example.gdextension
